--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,55 @@
-/* #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@keyframes flip {
+	0% {
+		transform: rotateX(0deg);
+	}
+	40% {
+		transform: rotateX(90deg);
+	}
+	60% {
+		transform: rotateX(90deg);
+	}
+	100% {
+		transform: rotateX(0deg);
+	}
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
+	.guess-letter {
+		transition: background-color 0.5s ease;
+		perspective: 1000px;
+	}
+	.guess-letter:nth-child(1) {
+		transition-delay: 0.3s;
+	}
+	.guess-letter:nth-child(2) {
+		transition-delay: 0.5s;
+	}
+	.guess-letter:nth-child(3) {
+		transition-delay: 0.7s;
+	}
+	.guess-letter:nth-child(4) {
+		transition-delay: 0.9s;
+	}
+	.guess-letter:nth-child(5) {
+		transition-delay: 1.1s;
+	}
+	.flip:nth-child(1) {
+		animation: flip 0.6s forwards;
+	}
+	.flip:nth-child(2) {
+		animation: flip 0.6s 0.2s forwards;
+	}
+	.flip:nth-child(3) {
+		animation: flip 0.6s 0.4s forwards;
+	}
+	.flip:nth-child(4) {
+		animation: flip 0.6s 0.6s forwards;
+	}
+	.flip:nth-child(5) {
+		animation: flip 0.6s 0.8s forwards;
+	}
 
-.card {
-  padding: 2em;
+	.keyboard-letter {
+		transition: all 0.5s ease;
+	}
 }
-
-.read-the-docs {
-  color: #888;
-} */
