--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,63 @@
 	}
 }
 
+@keyframes win {
+	0% {
+		transform: scale(2);
+		opacity: 0;
+		filter: blur(5px);
+	}
+	60% {
+		transform: scale(0.8);
+	}
+	80% {
+		transform: scale(1.2);
+	}
+	100% {
+		transform: scale(1);
+		opacity: 1;
+		filter: blur(0);
+	}
+}
+
+@keyframes show {
+	0% {
+		opacity: 0;
+		transform: scale(0);
+		transform-origin: top;
+	}
+	100% {
+		opacity: 1;
+		transform: scale(1);
+	}
+}
+
+@keyframes lose {
+	0% {
+		opacity: 0;
+		filter: blur(5px);
+		transform: scale(2);
+	}
+
+	60% {
+		opacity: 1;
+	}
+
+	100% {
+		filter: blur(0);
+	}
+}
+
+@keyframes slide-up {
+	0% {
+		transform: translateY(100%);
+		opacity: 0;
+	}
+	100% {
+		transform: translateY(0);
+	}
+}
+
 @media (prefers-reduced-motion: no-preference) {
 	.guess-letter {
 		transition: background-color 0.5s ease;
@@ -50,6 +107,31 @@
 	}
 
 	.keyboard-letter {
-		transition: all 0.5s ease;
+		transition: all 0.3s ease;
+	}
+
+	.win {
+		animation: win 3s cubic-bezier(0.47, 0, 0.745, 0.715);
+	}
+
+	.lose {
+		animation: lose 5s cubic-bezier(0.19, 1, 0.72, 1) forwards;
+	}
+	.slide-up:nth-child(1) {
+		animation: slide-up 0.7s 4s ease both;
+	}
+	.slide-up:nth-child(2) {
+		animation: slide-up 0.7s 4.5s both;
+	}
+
+	.show-table {
+		animation: show 2s ease both;
+	}
+	.show-keyboard {
+		animation: show 2s 1s ease both;
+	}
+
+	.show-title {
+		animation: show 2s 2s ease both;
 	}
 }
